--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "react-dom": "^19.2.0",
         "react-router-dom": "^7.9.3",
         "vite": "^7.1.9"
+    },
+    "dependencies": {
+        "express": "^5.1.0"
     }
 }
