installed cookie parser

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vite": "^7.1.9"
     },
     "dependencies": {
+        "cookie-parser": "^1.4.7",
         "express": "^5.1.0"
     }
 }
