--- a/service/package.json
+++ b/service/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "service",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^3.0.3",
-    "cookie-parser": "^1.4.7",
-    "express": "^5.1.0",
-    "mongodb": "^7.0.0",
-    "uuid": "^8.3.2"
-  }
+    "name": "service",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bcryptjs": "^3.0.3",
+        "cookie-parser": "^1.4.7",
+        "express": "^5.1.0",
+        "mongodb": "^7.0.0",
+        "uuid": "^8.3.2",
+        "ws": "^8.18.3"
+    }
 }
